# async_log

./: CMakeLists.txt
src/: async_logger.cpp  async_logger.h  circular_buffer.h  event.h
test/: async_logger_test.cpp
